# public-video-service

./: .env.example  .gitignore  Cargo.toml  Clippy.toml  Makefile  README.md  config.dev.toml  config.toml  cors-test.html  demo-cors.md  rustfmt.toml  test-cors-configs.toml  test-cors.sh
.github/workflows/: ci.yml
crates/api-gateway/: Cargo.toml
crates/api-gateway/src/: config.rs  lib.rs  main.rs
crates/api-gateway/tests/: common.rs  config_precedence_test.rs  request_id_test.rs
crates/origin/: Cargo.toml
crates/origin/src/: main.rs
