[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
axum = "0.8"
config = "0.15.14"
dotenvy = "0.15.7"
reqwest = "0.12.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6.6", features = ["cors", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18.0", features = ["v4"] }
url = "2"

